--- a/WP_02_05/exercise_03/index.html
+++ b/WP_02_05/exercise_03/index.html
@@ -10,7 +10,7 @@
   <h2>넌 코딩할 때가 제일 이뻐</h2>
 
   <div class="total">
-    <div class="grid">
+    <div class="grid1">
       <img src="images/chicken.jpg">
       <div class="contents">
         <p class= "top">코딩에 빠진 닭</p>
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="grid">
+    <div class="grid2">
       <img src="images/sushi.jpg">
       <div class="contents">
         <p class= "top">코코 스시</p>
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div class="grid">
+    <div class="grid3">
       <img src="images/burger.jpg">
       <div class="contents">
         <p class= "top">코데리아</p>
@@ -37,7 +37,7 @@
       </div>
     </div>
     
-    <div class="grid">
+    <div class="grid4">
       <img src="images/bibimbap.jpg">
       <div class="contents">
         <p class= "top">코가네</p>
@@ -45,6 +45,8 @@
         <a href="#">바로 결제</a>
       </div>
     </div>
+
+    <div class="clearfix"></div>
   </div>
 </body>
 </html>
